@@ -997,6 +997,41 @@ operator|==
 literal|null
 condition|)
 block|{
+if|if
+condition|(
+operator|!
+operator|(
+name|attClass
+operator|.
+name|isInterface
+argument_list|()
+operator|&&
+name|Attribute
+operator|.
+name|class
+operator|.
+name|isAssignableFrom
+argument_list|(
+name|attClass
+argument_list|)
+operator|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"addAttribute() only accepts an interface that extends Attribute, but "
+operator|+
+name|attClass
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|" does not fulfil this contract."
+argument_list|)
+throw|;
+block|}
 name|addAttributeImpl
 argument_list|(
 name|attImpl
