@@ -911,6 +911,79 @@ name|TypeAttributeImpl
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testInvalidArguments
+specifier|public
+name|void
+name|testInvalidArguments
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+try|try
+block|{
+name|AttributeSource
+name|src
+init|=
+operator|new
+name|AttributeSource
+argument_list|()
+decl_stmt|;
+name|src
+operator|.
+name|addAttribute
+argument_list|(
+name|Token
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Should throw IllegalArgumentException"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|iae
+parameter_list|)
+block|{}
+try|try
+block|{
+name|AttributeSource
+name|src
+init|=
+operator|new
+name|AttributeSource
+argument_list|(
+name|Token
+operator|.
+name|TOKEN_ATTRIBUTE_FACTORY
+argument_list|)
+decl_stmt|;
+name|src
+operator|.
+name|addAttribute
+argument_list|(
+name|Token
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Should throw IllegalArgumentException"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|iae
+parameter_list|)
+block|{}
+block|}
 block|}
 end_class
 end_unit
